--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -61,7 +61,7 @@
                 }
 
                 .pay-all-btn {
-                    min-width: 25px;
+                    width: 25px;
                     height: 25px;
                     background-color: transparent;
                     padding: 0;
@@ -69,7 +69,6 @@
                     position: absolute;
                     right: 0;
 
-                    // background-color: #c9e2d9;
                     img {
                         width: 100%;
                         height: 100%;
