--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -136,12 +136,13 @@
     }
 
     .add-student-cmp {
-        position: fixed;
+        position: absolute;
         z-index: 100;
         width: 100%;
-        height: 95vh;
+        height: 100vh;
+        margin-top: 50px;
         left: 0;
-        bottom: 0;
+        bottom: -10px;
         background-color: white;
         overflow-y: scroll;
         padding-block: 15px;
